--- a/src/app/components/home/home.view.pug
+++ b/src/app/components/home/home.view.pug
@@ -1,4 +1,4 @@
-header.header(ng-class="{'header--small': currentState == 'single'}")
+header.header.header--shadow(ng-class="{'header--small': currentState == 'single'}")
     .container
 
         .header__content
