--- a/src/scss/base/_utils.scss
+++ b/src/scss/base/_utils.scss
@@ -1,3 +1,25 @@
+// Animations
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
 // Fonts
 
 @mixin font ($color: $gray-600, $font-size: 1.3rem, $line-height: $font-size * 2, $font-weight: normal) {
@@ -234,11 +256,11 @@ $xl: 1200px;
 // Show / Hide
 
 .show {
-    display: block !important;
+    display: block;
 }
 
 .hide {
-    display: none !important;
+    display: none;
 }
 
 .opacity-1 {
