--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,9 +1,12 @@
 .header {
     background: $white;
     height: 155px;
+}
+
+.header--shadow {
     box-shadow: inset 0 2px 3px $gray-200, 0 2px 3px $gray-200;
     position: relative;
-    z-index: 2;
+    z-index: 1;
 }
 
 .header--small {
