--- a/src/app/shared/user-profile/user-profile.view.pug
+++ b/src/app/shared/user-profile/user-profile.view.pug
@@ -1,4 +1,4 @@
-.modal
+.modal.hide
     .modal__layer(ng-click="modalClose()")
         .modal__content
             .user-profile
@@ -42,27 +42,56 @@
                             i.icon-arrow-right
 
                     .user-profile__stats--user-stats
-                        .user-stats-title
+                        .user-stats__title
                             .text--light That's where We have been these 5 months ago
-                        .user-stats-boxes
-                            .user-stats-boxes__item.rotate-35
-                                .user-stats-boxes__item--content
-                                    .value 46
+                        .user-stats__boxes
+                            .user-stats__box.rotate-35
+                                .user-stats__box--content
+                                    .value {{ user.stats.peers }}
                                     .name peers
 
-                            .user-stats-boxes__item.rotate-15
-                                .user-stats-boxes__item--content
-                                    .value 46
+                            .user-stats__box.rotate-15
+                                .user-stats__box--content
+                                    .value {{ user.stats.discussions }}
                                     .name discussions
 
-                            .user-stats-boxes__item.rotate-35
-                                .user-stats-boxes__item--content
-                                    .value 46
+                            .user-stats__box.rotate-35
+                                .user-stats__box--content
+                                    .value {{ user.stats.findings }}
                                     .name findings
 
-                            .user-stats-boxes__item.rotate-10 
-                                .user-stats-boxes__item--content
-                                    .value 46
+                            .user-stats__box.rotate-10 
+                                .user-stats__box--content
+                                    .value {{ user.stats.questions }}
                                     .name questions
-                        .user-stats-title
+
+                    .user-profile__stats--users-stats
+                        .users-stats__title
                             .text--light Who joined the platform that same period
+                        .users-stats__boxes
+                            .users-stats__box(ng-repeat="item in user.usersJoinedInTheSamePeroid")
+                                .users-stats__box--avatar
+                                    .avatar.avatar--small(ng-click="showUserProfile(users[item]['id'])")
+                                        img.avatar__img(ng-src="img/avatars/{{ item }}.jpg" alt="{{ users[item]['name'] }}")
+                                .users-stats__box--name
+                                        a(href="" ng-click="showUserProfile(users[item]['id'])") {{ users[item]['name'] }}
+
+                .user-profile__discussion 
+                    .discussion__title
+                        .text--light The hottest discussion these days
+
+                    .discussion__content
+                        .discussion__content--avatar
+                            .avatar.avatar--small(ng-click="showUserProfile(users[user.hottestDiscussionTheseDays.author]['id'])")
+                                img.avatar__img(ng-src="img/avatars/{{ user.hottestDiscussionTheseDays.author }}.jpg" alt="{{ users[user.hottestDiscussionTheseDays.author]['name'] }}")                            
+
+                        .discussion__content--article
+                            a(href="" ng-click="showUserProfile(users[user.hottestDiscussionTheseDays.author]['id'])") {{ users[user.hottestDiscussionTheseDays.author]['name'] }}
+                            span.text--light.separator--left found the guardian article
+                            a(ui-sref="home.singlequestion({ url: toUrl(user.hottestDiscussionTheseDays.question) })" ng-click="modalClose()")
+                                h2 {{ user.hottestDiscussionTheseDays.question }}
+
+                        .discussion__content--stats
+                            .discussion__content--stat(ng-repeat="(statKey, statValue) in user.hottestDiscussionTheseDays.stats")
+                                span.text--basic.separator--right {{ statValue }}
+                                span.text--italic {{ statKey }}
