--- a/src/scss/layout/_all-questions.scss
+++ b/src/scss/layout/_all-questions.scss
@@ -5,6 +5,7 @@
 
     .all-questions__question {
         padding-bottom: 42px;
+        border-bottom: 1px solid $gray-300;
     }
 
         .all-questions__question--stats {
