--- a/src/scss/layout/_single-question.scss
+++ b/src/scss/layout/_single-question.scss
@@ -12,7 +12,7 @@
         .single-question__answer--content {
             @include flex;
             width: 100%;
-            margin-top: -20px;
+            transform: translateY(-50%);
         }
 
     
